[package]
name = "lingua-ls"
version = "0.1.0"
edition = "2024"

[dependencies]
lsp-types = "0.97.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower-lsp = "0.20.0"
tracing = "0.1.43"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
